// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Confirmation Component should not render the validation alert if there are validations where isOk is true, but none where isOk is false 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isOk": true,
                "validationDescription": "do not render me",
                "validationFailedMessage": "I passed",
              },
            },
          ],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-1284301984"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      <p
        className="jsx-1284301984"
      >
        Thank you for reviewing your application to the CleanBC Industrial Incentive Program.
      </p>
      <p
        className="jsx-1284301984"
      >
        Your application is almost complete. Prior to submitting your application, please review and accept the following terms below.
      </p>
      <p
        className="jsx-1284301984"
      >
        By submitting the application you agree that the information contained in this application, or information contained in emissions reports submitted under the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        , may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        .
      </p>
      <ScrollableApplicationDisclaimer />
    </CardBody>
  </Card>
  <br
    className="jsx-1284301984"
  />
  <Relay(SubmitApplicationComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isOk": true,
                "validationDescription": "do not render me",
                "validationFailedMessage": "I passed",
              },
            },
          ],
        },
      }
    }
  />
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component should render the override justification component with the right props if an override is currently set 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification="I did a bad thing and I dont want to fix it"
    hasErrors={false}
    overrideActive={true}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": "I did a bad thing and I dont want to fix it",
        "validation": Object {
          "edges": Array [],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-1284301984"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      <p
        className="jsx-1284301984"
      >
        Thank you for reviewing your application to the CleanBC Industrial Incentive Program.
      </p>
      <p
        className="jsx-1284301984"
      >
        Your application is almost complete. Prior to submitting your application, please review and accept the following terms below.
      </p>
      <p
        className="jsx-1284301984"
      >
        By submitting the application you agree that the information contained in this application, or information contained in emissions reports submitted under the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        , may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        .
      </p>
      <ScrollableApplicationDisclaimer />
    </CardBody>
  </Card>
  <br
    className="jsx-1284301984"
  />
  <Relay(SubmitApplicationComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": "I did a bad thing and I dont want to fix it",
        "validation": Object {
          "edges": Array [],
        },
      }
    }
  />
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component should render the override justification component with the right props if no override is currently set 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-1284301984"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      <p
        className="jsx-1284301984"
      >
        Thank you for reviewing your application to the CleanBC Industrial Incentive Program.
      </p>
      <p
        className="jsx-1284301984"
      >
        Your application is almost complete. Prior to submitting your application, please review and accept the following terms below.
      </p>
      <p
        className="jsx-1284301984"
      >
        By submitting the application you agree that the information contained in this application, or information contained in emissions reports submitted under the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        , may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        .
      </p>
      <ScrollableApplicationDisclaimer />
    </CardBody>
  </Card>
  <br
    className="jsx-1284301984"
  />
  <Relay(SubmitApplicationComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [],
        },
      }
    }
  />
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component should render the validation alert if there are validations where isOk is false 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <Alert
    closeLabel="Close alert"
    show={true}
    transition={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "appear": false,
          "in": false,
          "mountOnEnter": false,
          "timeout": 300,
          "unmountOnExit": false,
        },
        "displayName": "Fade",
        "render": [Function],
      }
    }
    variant="warning"
  >
    <p>
      <strong>
        Some inconsistencies were found in your application. Please address these items before submitting by correcting the reported values or adding a comment in the relevant section to provide an explanation.
      </strong>
    </p>
    <ul>
      <li
        key="failed"
      >
        I failed
      </li>
    </ul>
  </Alert>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isOk": false,
                "validationDescription": "failed",
                "validationFailedMessage": "I failed",
              },
            },
          ],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-1284301984"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      <p
        className="jsx-1284301984"
      >
        Thank you for reviewing your application to the CleanBC Industrial Incentive Program.
      </p>
      <p
        className="jsx-1284301984"
      >
        Your application is almost complete. Prior to submitting your application, please review and accept the following terms below.
      </p>
      <p
        className="jsx-1284301984"
      >
        By submitting the application you agree that the information contained in this application, or information contained in emissions reports submitted under the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        , may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        .
      </p>
      <ScrollableApplicationDisclaimer />
    </CardBody>
  </Card>
  <br
    className="jsx-1284301984"
  />
  <Relay(SubmitApplicationComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isOk": false,
                "validationDescription": "failed",
                "validationFailedMessage": "I failed",
              },
            },
          ],
        },
      }
    }
  />
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component shows a message instead of the "submit application" button when there are validation errors 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={true}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {},
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <div
    className="jsx-1284301984 errors"
  >
    Your Application contains errors that must be fixed before submission.
  </div>
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component shows the "submit application" button when there is no validation error 1`] = `
<Fragment>
  <h1
    className="jsx-1284301984"
  >
    Summary of your application:
  </h1>
  <p
    className="jsx-1284301984"
    style={
      Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      }
    }
  >
    Please review the information you have provided before continuing.
  </p>
  <br
    className="jsx-1284301984"
  />
  <Relay(ApplicationOverrideJustificationComponent)
    applicationDetailsRendered={false}
    applicationOverrideJustification={null}
    hasErrors={false}
    overrideActive={false}
    revisionId="abc"
    setOverrideActive={[Function]}
  />
  <Relay(ApplicationDetailsComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [],
        },
      }
    }
    diffQuery={null}
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setApplicationDetailsRendered={[Function]}
  />
  <br
    className="jsx-1284301984"
  />
  <Card
    body={false}
    id="next-step"
  >
    <CardHeader>
      <h2
        className="jsx-1284301984"
      >
        Before you submit
      </h2>
    </CardHeader>
    <CardBody>
      <p
        className="jsx-1284301984"
      >
        Thank you for reviewing your application to the CleanBC Industrial Incentive Program.
      </p>
      <p
        className="jsx-1284301984"
      >
        Your application is almost complete. Prior to submitting your application, please review and accept the following terms below.
      </p>
      <p
        className="jsx-1284301984"
      >
        By submitting the application you agree that the information contained in this application, or information contained in emissions reports submitted under the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        , may be disclosed to British Columbia government employees, contractors and agencies for the purpose of administering the CleanBC Program for Industry or the
         
        <a
          className="jsx-1284301984"
          href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
          rel="noopener noreferrer"
          target="_blank"
        >
          <em
            className="jsx-1284301984"
          >
            Greenhouse Gas Industrial Reporting and Control Act
          </em>
        </a>
        .
      </p>
      <ScrollableApplicationDisclaimer />
    </CardBody>
  </Card>
  <br
    className="jsx-1284301984"
  />
  <Relay(SubmitApplicationComponent)
    applicationRevision={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_applicationRevision": true,
          "SubmitApplication_applicationRevision": true,
        },
        " $refType": "ApplicationWizardConfirmation_applicationRevision",
        "id": "abc",
        "orderedFormResults": Object {
          "edges": Array [
            Object {
              "node": Object {
                "formJsonByFormId": Object {
                  "formJson": Object {
                    "schema": Object {
                      "properties": Object {
                        "foo": Object {
                          "type": "string",
                        },
                      },
                      "required": Array [
                        "foo",
                      ],
                      "type": "object",
                    },
                  },
                },
                "formResult": Object {
                  "foo": "bar",
                },
              },
            },
          ],
        },
        "overrideJustification": null,
        "validation": Object {
          "edges": Array [],
        },
      }
    }
  />
  <JSXStyle
    id="1284301984"
  >
    h1{font-size:30px;}.errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}@media print{.print-hide{display:none !important;}}
  </JSXStyle>
</Fragment>
`;
